<resources>
    <string name="app_name">Creative Connect</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="simple_view_behavior">main.master.c31.SimpleViewBehavior</string>

    <string name="name">
        <font size="15">Name</font>
    </string>
    <string name="size">
        <font size="15">Size</font>
    </string>
    <string name="RequiredContent">
        <font size="15">Required Content</font>
    </string>
    <string name="vanue">
        <font size="15">Venue</font>
    </string>
    <string name="Username">
        <font size="15">Username</font>
    </string>
    <string name="password">
        <font size="15">Password</font>
    </string>
    <string name="description">
        <font size="15">Description</font>
    </string>

    <string name="Remarksdesigner">
        <font size="15">Remarks for the designer</font>
    </string>

    <string name="noti_channel_default">Default Channel</string>
    <string name="btn_retry_not">Retry</string>
    <string name="btn_cancel_not">Cancel</string>
    <string name="file_upload_successful">File has been uploaded successfully</string>
    <string name="uploading">Uploading</string>
    <string name="in_progress">in progress</string>
    <string name="message_failed">File has been not uploaded</string>
    <string name="message_upload_success">Uploading Success</string>
    <string name="error_upload_failed">Uploading failed</string>
    <string name="message_upload_failed">File is not uploaded. Please TRY AGAIN</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
