<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_item_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="#ffffff"
        android:orientation="horizontal"
        app:elevation="1dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_arrow_back_black_24dp"/>
        <TextView
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:textColor="@color/statusbarcolor"
            android:textSize="@dimen/_14sdp"
            android:text="EVENT DETAILS"
            >
        </TextView>

    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9.5"

        >
        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="20dp"
            android:paddingRight="24dp">



            <EditText android:id="@+id/activityname"
                android:layout_width="match_parent"
                      android:layout_height="@dimen/_40sdp"
                android:background="@drawable/rounded_edittext"
                android:gravity="center"
                android:hint="@string/name" />

            <EditText android:id="@+id/activitydescription"
                android:layout_width="match_parent"
                      android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:inputType="textMultiLine"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/description" />

            <EditText android:id="@+id/vanue"
                      android:layout_width="match_parent"
                      android:layout_height="@dimen/_40sdp"
                      android:gravity="center"
                      android:layout_marginTop="20dp"
                      android:background="@drawable/rounded_edittext"
                      android:hint="@string/vanue" />

            <TextView android:id="@+id/date"
                android:layout_width="match_parent"
                      android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textSize="15sp"
                android:background="@drawable/rounded_edittext"
                android:hint="Choose Your Date" />

            <TextView android:id="@+id/time"
                android:layout_width="match_parent"
                      android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textSize="15sp"
                android:background="@drawable/rounded_edittext"
                android:hint="Choose Your Time" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:orientation="horizontal"
        android:elevation="30dp"
        >


        <TextView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:text="SUBMIT"
            android:textColor="#ffffff"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
